--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
     <title>A Multiplayer Game</title>
     <style>
       canvas {
-        width: 800px;
-        height: 600px;
-        border: 5px solid black;
+        display:block;
+        border:0px;
       }
     </style>
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    body {
+      margin:0;
+      padding:0;
+    }
   </body>
   <script src="/static/game.js"></script>
 </html>
