start of implementing triangles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         display:block;
         border:0px;
       }
+      body {
+        margin:0px;
+        padding:0px;
+      }
     </style>
     <script src="/socket.io/socket.io.js"></script>
   </head>
