--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <title>A Multiplayer Game</title>
-    
     <script src="/socket.io/socket.io.js"></script>
-    <link rel="stylesheet" type='text/css' href="/styles.css">
+    <link rel="stylesheet" type='text/css' href="/static/styles.css">
   </head>
   <body>
     <form id="forms">
@@ -12,8 +11,8 @@
       <input type="button" id="howPlay" value="Controls">
       <input type="button" id="btnStart" onclick="change_css(); start()" value="Play">
     </form>
-    
-    <canvas id="canvas" width="window.innerWidth" height="window.innerHeight"></canvas> 
+
+    <canvas id="canvas" width="window.innerWidth" height="window.innerHeight"></canvas>
     <script src="/static/game.js"></script>
   </body>
 </html>
