--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <form id="forms">
       <input type="text" id="nickname" name="Nickname" value="Player">
-      <input type="button" id="howPlay" value="Controls">
+      <input type="button" id="howPlay" value="Controls" onclick="showControls()">
       <input type="button" id="btnStart" onclick="change_css(); start()" value="Play">
     </form>
 
