fonts/text box filler

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type='text/css' href="/static/styles.css">
   </head>
   <body>
-    <div id="main">
+    <div class="c1" id="main">
       <form id="form">
-        <input type="text" id="nickname" name="Nickname" value="Player">
+        <input type="text" placeholder="Nickname" id="nickname" name="Nickname">
         <input type="button" id="ctrls" onclick="showControls()" value="Controls">
         <input type="button" id="startb" onclick="change_css(); start()" value="Play">
         <input type="button" id="credits" onclick="" value="Credits">
