--- a/index.html
+++ b/index.html
@@ -6,16 +6,52 @@
     <link rel="stylesheet" type='text/css' href="/static/styles.css">
   </head>
   <body>
-    <div class="c1" id="main">
-      <form id="form">
-        <input type="text" placeholder="Nickname" id="nickname" name="Nickname">
-        <input type="button" id="ctrls" onclick="showControls()" value="Controls">
-        <input type="button" id="startb" onclick="change_css(); start()" value="Play">
-        <input type="button" id="credits" onclick="" value="Credits">
-      </form>
+    <div id="box1">
+      <div class="image" id="logo"></div>
+      <div class="c1" id="main">
+        <form id="form">
+          <input type="text" placeholder="Nickname" id="nickname" name="Nickname">
+          <input type="button" id="ctrls" onclick="ctrlsShowCss()" value="Controls">
+          <input type="button" id="startb" onclick="startCss(); start()" value="Play">
+          <input type="button" id="credits" onclick="creditsShowCss()" value="Credits">
+        </form>
+        <div id="ctrlspage">
+          <div id="ctrlshead">
+            C O N T R O L S
+          </div>
+          <div id="ctrlstxt">
+
+Move: WASD
+Aim: mouse
+Shoot: Left-click
+Dash: F
+
+          </div>
+          <input type="button" id="ctrlsback" onclick="ctrlsBackCss()" value="Back">
+        </div>
+        <div id="creditspage">
+          <div id="creditshead">
+            C R E D I T S
+          </div>
+          <div id="creditstxt">
+
+Site Creators:
+Ashwanth Muruhathasan
+Sarthak Madan
+
+Special Thanks to:
+Ricky Fok
+Sumanth Gurram
+Aditya Tomar
+
+          </div>
+          <input type="button" id="creditsback" onclick="creditsBackCss()" value="Back">
+        </div>
+      </div>
     </div>
 
     <canvas id="canvas" width="window.innerWidth" height="window.innerHeight"></canvas>
+    <script src="/static/pages.js"></script>
     <script src="/static/game.js"></script>
   </body>
 </html>
