--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form id="form">
           <input type="text" placeholder="Nickname" id="nickname" name="Nickname">
           <input type="button" id="ctrls" onclick="ctrlsShowCss()" value="Controls">
-          <input type="button" id="startb" onclick="startCss(); start()" value="Play">
+          <input type="button" id="startb" onclick="startCss(); game()" value="Play">
           <input type="button" id="credits" onclick="creditsShowCss()" value="Credits">
         </form>
         <div id="ctrlspage">
@@ -51,7 +51,7 @@ Aditya Tomar
     </div>
 
     <canvas id="canvas" width="window.innerWidth" height="window.innerHeight"></canvas>
-    <script src="/static/pages.js"></script>
     <script src="/static/game.js"></script>
+    <script src="/static/pages.js"></script>
   </body>
 </html>
